--- a/resources/assets/sass/includes/media_queries.scss
+++ b/resources/assets/sass/includes/media_queries.scss
@@ -748,6 +748,7 @@
             display: table;
             margin-bottom: 10px;
             .nav-link {
+              font-size: 0.8rem;
               padding: 8px 5px;
               line-height: 0.875rem;
             }
